# actor

./: .gitignore  404.html  Cargo.toml  README.md  index.html  sitemap.xml  test.sh
.github/workflows/: docs.yml
architecture/: index.html
core-concepts/: index.html
ko/: index.html
ko/architecture/: index.html
ko/core-concepts/: index.html
ko/multi-node/: index.html
ko/quickstart/: index.html
multi-node/: index.html
quickstart/: index.html
search/: search_index.json
src/: actor.rs  actor_system.rs  address.rs  channel.rs  error.rs  lib.rs  messenger.rs  prelude.rs  std_actor.rs  sync_actor.rs  test.rs  tokio_actor.rs  types.rs
src/actor/: actor_bounded.rs  actor_unbounded.rs  mod.rs
src/actor_system/: actor_system_bounded.rs  actor_system_unbounded.rs  mod.rs
src/inter_node/: address.rs  decoder.rs  dispatcher.rs  envelope.rs  mod.rs
src/test/: mod.rs  test_bounded.rs  test_multi_node.rs  test_multi_node_unbounded.rs  test_single_node.rs  test_unbounded.rs
wiki/: mkdocs.yml
wiki/docs/en/: architecture.md  core-concepts.md  index.md  multi-node.md  quickstart.md
wiki/docs/ko/: architecture.md  core-concepts.md  index.md  multi-node.md  quickstart.md
