[package]
name = "xan-actor"
version = "4.2.0"
edition = "2024"
authors = [ "Xanthorrhizol <xanthorrhizol@proton.me>" ]
description = "Akka actor"
repository = "https://github.com/Xanthorrhizol/actor"
readme = "README.md"
license = "MIT"
keywords = ["akka", "actor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.68" }
bincode = "1.3.3"
log = "0.4.17"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
