[package]
name = "xan-actor"
version = "10.0.0"
edition = "2024"
authors = [ "Xanthorrhizol <xanthorrhizol@proton.me>" ]
description = "Akka actor"
repository = "https://github.com/Xanthorrhizol/actor"
readme = "README.md"
license = "MIT"
keywords = ["akka", "actor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.68" }
log = "0.4.17"
regex = "1.11.1"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1.20.0", features = ["v4"] }
xan-log = { version = "1.0.1", optional = true }
xancode = { version = "0.3.0", optional = true }
xanq = { version = "0.1.0", optional = true }
inventory = { version = "0.3", optional = true }

[features]
default = ["bounded-channel"]
xan-log = ["dep:xan-log"]
unbounded-channel = []
bounded-channel = []
multi-node = ["dep:xancode", "dep:xanq", "dep:inventory"]

